@@ -1,5 +1,4 @@
 /*
- * Copyright (C) 2001-2003 Peter J Jones (pjones@pmade.org)
  * Copyright (C) 2013 Vaclav Slavik <vslavik@gmail.com>
  * All Rights Reserved
  * 
@@ -31,18 +30,74 @@
  * SUCH DAMAGE.
  */
 
-#ifndef _xmlwrapp_xmlwrapp_h_
-#define _xmlwrapp_xmlwrapp_h_
+/**
+    @file
 
-#include "xmlwrapp/version.h"
+    This file contains the definition of the xml::schema class.
+ */
+
+#ifndef _xmlwrapp_schema_h_
+#define _xmlwrapp_schema_h_
+
+// xmlwrapp includes
 #include "xmlwrapp/init.h"
-#include "xmlwrapp/nodes_view.h"
-#include "xmlwrapp/node.h"
-#include "xmlwrapp/attributes.h"
-#include "xmlwrapp/document.h"
-#include "xmlwrapp/tree_parser.h"
-#include "xmlwrapp/event_parser.h"
+#include "xmlwrapp/export.h"
 #include "xmlwrapp/errors.h"
-#include "xmlwrapp/schema.h"
 
-#endif // _xmlwrapp_xmlwrapp_h_
+namespace xml
+{
+
+// forward declarations
+class document;
+class error_messages;
+
+namespace impl
+{
+struct schema_impl;
+}
+
+/**
+    XML Schema.
+
+    This class is used to validate documents against XML Schema.
+
+    @since 0.7.0
+ */
+class XMLWRAPP_API schema
+{
+public:
+    /**
+        Parses XML Schema document and creates schema instance from it.
+
+        Errors are handled by @a on_error handler; by default, xml::exception
+        is thrown on errors. If there's a fatal error that prevents the schema
+        from being loaded and the error handler doesn't throw an exception, the
+        constructor will throw xml::exception anyway.
+     */
+    explicit schema(const document& doc, error_handler& on_error = throw_on_error);
+
+    /// Destructor
+    ~schema();
+
+    /**
+        Validates the document @a doc against the schema.
+
+        Errors are handled by @a on_error handler; by default, xml::exception
+        is thrown on errors.
+
+        @return `true` if the document is valid with regard to the schema,
+                `false` otherwise.
+     */
+    bool validate(const document& doc, error_handler& on_error = throw_on_error) const;
+
+private:
+    impl::schema_impl *pimpl_;
+
+    // Schema class is not copyable
+    schema(const schema&);
+    schema& operator=(const schema&);
+};
+
+} // namespace xml
+
+#endif // _xmlwrapp_schema_h_
