@@ -29,6 +29,7 @@ libxmlwrapp_la_SOURCES = \
 		libxml/node_manip.cxx \
 		libxml/node_manip.h \
 		libxml/pimpl_base.h \
+		libxml/schema.cxx \
 		libxml/tree_parser.cxx \
 		libxml/utility.cxx \
 		libxml/utility.h
